# ai

./: README.md  calculadora.py  greetings.py
fastapi-project/: .env.example  .gitignore  COMANDOS.md  INICIO_RAPIDO.md  README.md  pyproject.toml
fastapi-project/src/fastapi_project/: __init__.py  config.py  main.py
fastapi-project/src/fastapi_project/routers/: health.py
