[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cursor Agent", email = "cursoragent@cursor.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
fastapi-project = "fastapi_project:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
